--- a/Class2.ipynb
+++ b/Class2.ipynb
@@ -1625,6 +1625,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "46e385ad",
+   "metadata": {},
+   "source": [
+    "BARPLOT"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 75,
    "id": "85c24ba2",
@@ -1658,23 +1666,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 76,
-   "id": "09c7e128",
+   "cell_type": "markdown",
+   "id": "628cb9b9",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'WORDCLOUD' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[76], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m WORDCLOUD\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'WORDCLOUD' is not defined"
-     ]
-    }
-   ],
    "source": [
     "WORDCLOUD"
    ]
