--- a/Class1.ipynb
+++ b/Class1.ipynb
@@ -5,7 +5,7 @@
    "id": "5d2b761d",
    "metadata": {},
    "source": [
-    "PYTHON STRINGS"
+    "### PYTHON STRINGS"
    ]
   },
   {
@@ -32,7 +32,7 @@
    "id": "1d6ac43f",
    "metadata": {},
    "source": [
-    "ACCESSING INDIVIDUAL LETTERS"
+    "### ACCESSING INDIVIDUAL LETTERS"
    ]
   },
   {
@@ -59,7 +59,7 @@
    "id": "184452dd",
    "metadata": {},
    "source": [
-    "STRING SLICING"
+    "### STRING SLICING"
    ]
   },
   {
@@ -120,6 +120,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "31955832",
+   "metadata": {},
+   "source": [
+    "### SLICING USING NEGATIVE INDEXING"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "237e3153",
@@ -143,7 +151,7 @@
    "id": "28d5c392",
    "metadata": {},
    "source": [
-    "MULTILINE STRINGS"
+    "### MULTILINE STRINGS"
    ]
   },
   {
@@ -176,7 +184,7 @@
    "id": "5a742ac1",
    "metadata": {},
    "source": [
-    "TO CHECK FOR A WORD IN STRING"
+    "### TO CHECK FOR A WORD IN STRING"
    ]
   },
   {
@@ -222,7 +230,7 @@
    "id": "eeca0966",
    "metadata": {},
    "source": [
-    "STRING LENGTH"
+    "### GETTING STRING LENGTH"
    ]
   },
   {
@@ -249,7 +257,7 @@
    "id": "9c4e4b9c",
    "metadata": {},
    "source": [
-    "STRING FUNCTIONS"
+    "### STRING FUNCTIONS"
    ]
   },
   {
@@ -286,7 +294,7 @@
    "id": "aa1d7536",
    "metadata": {},
    "source": [
-    "STRING CONCATENATION"
+    "### STRING CONCATENATION"
    ]
   },
   {
@@ -315,7 +323,7 @@
    "id": "43016e11",
    "metadata": {},
    "source": [
-    "STRING FORMATTING"
+    "### STRING FORMATTING"
    ]
   },
   {
@@ -337,14 +345,6 @@
     "txt = \"My name is Likitha, and I am {} years old\"\n",
     "print(txt.format(age))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f28bba49",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
