--- a/Class2.ipynb
+++ b/Class2.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "f0e31f64",
+   "metadata": {},
+   "source": [
+    "## CLASSWORK WEEK-2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1441d431",
    "metadata": {},
    "source": [
-    "# REGULAR EXPRESSIONS"
+    "### DATA EXPLORATION AND  REGULAR EXPRESSIONS"
    ]
   },
   {
@@ -13,7 +21,7 @@
    "id": "0f1125b2",
    "metadata": {},
    "source": [
-    "### IMPORTING PACKAGES AND READING FILE"
+    " IMPORTING PACKAGES AND READING FILE"
    ]
   },
   {
@@ -338,16 +346,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "45e14bf2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df = df.sample(frac=0.2)\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "fdb02e65",
    "metadata": {},
@@ -375,7 +373,8 @@
     }
    ],
    "source": [
-    "df.columns  #displays all the columns in the datframe\n"
+    "#displays all the columns in the dataframe\n",
+    "df.columns  \n"
    ]
   },
   {
@@ -411,7 +410,8 @@
     }
    ],
    "source": [
-    "df.dtypes  #gives datatype of columns\n"
+    "#gives datatype of columns\n",
+    "df.dtypes  \n"
    ]
   },
   {
@@ -442,6 +442,7 @@
     }
    ],
    "source": [
+    "# gives information about all the columns\n",
     "df.info()\n"
    ]
   },
@@ -785,9 +786,10 @@
     }
    ],
    "source": [
+    "#isna() checks for null values and sum() adds total missing values \n",
     "df['speaker'].fillna('unknown', inplace=True)\n",
     "df['position'].fillna('unknown', inplace=True)\n",
-    "df.isna().sum()   #isna() checks for null values and sum() adds total missing values "
+    "df.isna().sum()   "
    ]
   },
   {
@@ -1046,6 +1048,7 @@
     }
    ],
    "source": [
+    "# .2 line plot for length column\n",
     "df['length'].plot()\n"
    ]
   },
@@ -1085,6 +1088,7 @@
     }
    ],
    "source": [
+    "# Boxplot for length column\n",
     "df['length'].plot(kind='box', vert=False)"
    ]
   },
@@ -1124,6 +1128,8 @@
     }
    ],
    "source": [
+    "# Histogram for 30 samples for length coulmn\n",
+    "\n",
     "df['length'].plot(kind='hist', bins=30)"
    ]
   },
@@ -1161,6 +1167,7 @@
     }
    ],
    "source": [
+    "# Boxplot for 5 samples in Country column\n",
     "import seaborn as sns \n",
     "where = df['country'].isin(['USA', 'FRA', 'GBR', 'CHN', 'RUS'])\n",
     "g = sns.catplot(data=df[where], x=\"country\", y=\"length\", kind='box')\n",
@@ -1173,6 +1180,16 @@
    "metadata": {},
    "source": [
     "### REGULAR EXPRESSIONS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2fd8b2cb",
+   "metadata": {},
+   "source": [
+    "REGEX :Regular expression (regex or regexp) is a sequence of characters that forms a search pattern. \n",
+    "    It is a powerful tool for string manipulation and searching. \n",
+    "    The re module in Python provides support for regular expressions."
    ]
   },
   {
@@ -1215,6 +1232,15 @@
    "metadata": {},
    "source": [
     "### STOPWORDS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "664094e1",
+   "metadata": {},
+   "source": [
+    "\n",
+    "In natural language processing, stopwords are commonly used words (such as \"the,\" \"is,\" \"and,\" etc.) that are often excluded from text processing because they do not carry significant meaning and are used for grammatical structure. In Python, the nltk (Natural Language Toolkit) library is commonly used for working with text data, including handling stopwords."
    ]
   },
   {
@@ -1262,6 +1288,7 @@
     }
    ],
    "source": [
+    "# Removing stopwords from given string\n",
     "def remove_stop(tokens):\n",
     "    return [t for t in tokens if t.lower() not in stopwords]\n",
     "#testing it\n",
@@ -1434,7 +1461,7 @@
    ],
    "source": [
     "df['num_tokens'] = df['tokens'].map(len)\n",
-    "df.tail()"
+    "df.tail()  # tail() function gives last 5 rows in a dataframe"
    ]
   },
   {
@@ -1443,6 +1470,14 @@
    "metadata": {},
    "source": [
     "### COUNTING WORDS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a1226ec",
+   "metadata": {},
+   "source": [
+    "A Counter is a data type in the collections module. It is a dict subclass that stores counts for hashable objects."
    ]
   },
   {
@@ -1492,7 +1527,7 @@
    ],
    "source": [
     "counter = Counter()\n",
-    "df['tokens'].map(counter.update)\n",
+    "df['tokens'].map(counter.update)  #iterates over each entry,updating the counter with the token counts\n",
     "print(counter.most_common(5))"
    ]
   },
@@ -1504,7 +1539,7 @@
    "outputs": [],
    "source": [
     "freq_df = pd.DataFrame.from_dict(counter, orient='index', columns=['freq'])\n",
-    "freq_df = freq_df.query('freq >= 1')\n",
+    "freq_df = freq_df.query('freq >= 1') #include only rows where the 'freq' column is greater than or equal to 1.\n",
     "freq_df.index.name = 'token'"
    ]
   },
@@ -1705,7 +1740,7 @@
     }
    ],
    "source": [
-    "freq_df.describe()"
+    "freq_df.describe() #describe() can give you information such as the count, mean, standard deviation..."
    ]
   },
   {
@@ -1714,6 +1749,14 @@
    "metadata": {},
    "source": [
     "### BARPLOT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7dd59d35",
+   "metadata": {},
+   "source": [
+    "Bar plots are commonly used to show the distribution of a categorical variable or to compare the values of different categories."
    ]
   },
   {
@@ -1745,7 +1788,7 @@
    ],
    "source": [
     "ax = freq_df.head(15).plot(kind='barh', width=0.95, figsize=(12,8))\n",
-    "ax.invert_yaxis()\n",
+    "ax.invert_yaxis()   #Inverts the y-axis, so the highest frequency is at the top of the plot.\n",
     "ax.set(xlabel='Frequency', ylabel='Token', title='Top Words')"
    ]
   },
@@ -1755,6 +1798,15 @@
    "metadata": {},
    "source": [
     "### WORDCLOUD"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ee481d8",
+   "metadata": {},
+   "source": [
+    "Word cloud is one of the most powerful and straightforward visualization methods \n",
+    "when it comes to text data. The size of words are dependent on the occurrence frequency "
    ]
   },
   {
@@ -1792,7 +1844,7 @@
     "\n",
     "plt.figure(figsize=(14, 7)) ###\n",
     "wc = WordCloud(max_words=100, stopwords=stopwords)\n",
-    "wc.generate(text)\n",
+    "wc.generate(text)   # Generates the WordCloud from the input text data.\n",
     "plt.imshow(wc, interpolation='bilinear')\n",
     "plt.axis(\"off\")"
    ]
@@ -1824,9 +1876,9 @@
    ],
    "source": [
     "wc = WordCloud(background_color='white', width = 300, height=300, max_words=100, margin=2)\n",
-    "wc.fit_words(freq_df['freq'].to_dict() )\n",
+    "wc.fit_words(freq_df['freq'].to_dict() ) # uses the frequency information from the DataFrame to fit the WordCloud.\n",
     "plt.figure(figsize = (8, 8), facecolor = None)\n",
-    "plt.imshow(wc)\n",
+    "plt.imshow(wc) #displays the WordCloud.\n",
     "plt.axis(\"off\")\n",
     "plt.tight_layout(pad = 0)\n",
     "plt.show()"
