--- a/Class1.ipynb
+++ b/Class1.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "943f0027",
+   "metadata": {},
+   "source": [
+    "## CLASSWORK WEEK-1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5d2b761d",
    "metadata": {},
    "source": [
@@ -10,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "d1b11ec4",
    "metadata": {},
    "outputs": [
@@ -37,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "3d7e72e8",
    "metadata": {},
    "outputs": [
@@ -63,8 +71,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3d5ed473",
+   "metadata": {},
+   "source": [
+    "Slicing in Python is a technique used to extract a portion of a sequence (such as a string, list, or tuple). It allows you to create a new sequence by specifying a range of indices."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "49c7b130",
    "metadata": {},
    "outputs": [
@@ -102,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "d497440e",
    "metadata": {},
    "outputs": [
@@ -156,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "abc2fcf3",
    "metadata": {},
    "outputs": [
@@ -172,6 +188,7 @@
     }
    ],
    "source": [
+    "# having multiple lines in single string\n",
     "a = \"\"\"this is,\n",
     "the multiple,\n",
     "lines string.\n",
@@ -189,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "45bf93b8",
    "metadata": {},
    "outputs": [
@@ -202,13 +219,14 @@
     }
    ],
    "source": [
+    "# we can find a word in given string\n",
     "txt = \"The best things in life are free!\"\n",
     "print(\"free\" in txt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "21f7ce8f",
    "metadata": {},
    "outputs": [
@@ -221,6 +239,7 @@
     }
    ],
    "source": [
+    "# to check if a word present in string or not \n",
     "txt = \"The best things in life are free!\"\n",
     "print(\"expensive\" not in txt)"
    ]
@@ -235,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "3abf1d51",
    "metadata": {},
    "outputs": [
@@ -248,6 +267,7 @@
     }
    ],
    "source": [
+    "#length function to find total length of a string\n",
     "a = \"Welcome to text based analysis class!\"\n",
     "print(len(a))"
    ]
@@ -262,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "9692d67b",
    "metadata": {},
    "outputs": [
@@ -299,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "c5cd0804",
    "metadata": {},
    "outputs": [
@@ -312,6 +332,7 @@
     }
    ],
    "source": [
+    "# adding two strings \n",
     "a = \"Welcome to\"\n",
     "b = \"text based analysis\"\n",
     "c = a + \" \" + b\n",
@@ -327,8 +348,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "544624d2",
+   "metadata": {},
+   "source": [
+    "String formatting in Python allows you to create strings with dynamic content by inserting values into a template."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "01943321",
    "metadata": {},
    "outputs": [
@@ -344,6 +373,39 @@
     "age = 22\n",
     "txt = \"My name is Likitha, and I am {} years old\"\n",
     "print(txt.format(age))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "520957dc",
+   "metadata": {},
+   "source": [
+    "### ASKING INPUT FROM USER"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "79fb8e8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name :Likitha Reddy\n",
+      "Enter your age : 22\n",
+      "Hello! Likitha Reddy\n",
+      "Your age is : 22\n"
+     ]
+    }
+   ],
+   "source": [
+    "# asking input from the user\n",
+    "name = input(\"Enter your name :\")\n",
+    "age = input(\"Enter your age : \")\n",
+    "print(\"Hello! \" + name)\n",
+    "print(\"Your age is : \" + age)"
    ]
   }
  ],
