Redditapp data Analysis

--- a/Class3_Reddit.ipynb
+++ b/Class3_Reddit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fd2f4868",
+   "id": "2b019813",
    "metadata": {},
    "source": [
     "# CLASSWORK3_REDDIT APP DATA"
@@ -31,6 +31,14 @@
     "    client_secret=\"E0-M3cQKRpKisIzziqPLFhUTG6tfYw\",\n",
     "    user_agent=user_agent\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96b95338",
+   "metadata": {},
+   "source": [
+    "## IMPORTING PACKAGES"
    ]
   },
   {
@@ -126,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1785df06",
+   "id": "f0129856",
    "metadata": {},
    "source": [
     "## SCRAPPED DATA"
@@ -408,7 +416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4ab35c4",
+   "id": "86118d12",
    "metadata": {},
    "source": [
     "## TWITTER DATA PREPROCESSING FOR BITCOIN ANALYSIS"
@@ -505,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c78a230",
+   "id": "c35ac22d",
    "metadata": {},
    "source": [
     "## REMOVING EMOJI'S AND UNICODE FROM REDDIT DATA FOR ENHANCED ANALYSIS"
@@ -614,7 +622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d496b17",
+   "id": "85f04019",
    "metadata": {},
    "source": [
     "## TEXT ANALYSIS AND VISUALISATION FOR TEXTBLOB AND WORDCLOUD"
@@ -633,7 +641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb295d12",
+   "id": "55d1992a",
    "metadata": {},
    "source": [
     "### SENTIMENT ANALYSIS: SUBJECTIVITY AND POLARITY OF BITCOIN RELATED TEXT"
@@ -739,7 +747,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a8d8ce6",
+   "id": "930d3a68",
    "metadata": {},
    "source": [
     "## CATEGORIZING BITCOIN SENTIMENT"
@@ -748,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc1e7a4d",
+   "id": "a9cbb909",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +798,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79dfc527",
+   "id": "1cab5383",
    "metadata": {},
    "source": [
     "### VISUALIZING BITCOIN SENTIMENT DISTRIBUTION"
