Redditapp Data Analysis

--- a/Class3_Reddit.ipynb
+++ b/Class3_Reddit.ipynb
@@ -23,6 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#importing praw package\n",
     "import praw\n",
     "\n",
     "user_agent = \"Reddit_Scrapper 1.0 by /u/FeatureChoice5036\"\n",
@@ -48,6 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#importing pandas , numpy and regex modules\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import re #RegEx : Regular expression"
@@ -126,6 +128,7 @@
     }
    ],
    "source": [
+    "#top posts from the \"bitcoin\" subreddit using PRAW\n",
     "headlines = set()\n",
     "for submission in reddit.subreddit(\"bitcoin\").hot(limit=None):\n",
     "    headlines.add(submission.title)\n",
@@ -216,6 +219,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e27f5f9f",
+   "metadata": {},
+   "source": [
+    "## REMOVING UNWANTED COLUMNS"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "97ee174d",
@@ -290,24 +301,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "18f25f9d",
+   "metadata": {},
+   "source": [
+    "## RETRIEVING COLUMN NAME"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "c500158e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "RangeIndex(start=0, stop=1, step=1)"
+       "Index(['Titles', 'Subjectivity', 'Polarity', 'Insight'], dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#gives the column names\n",
     "bitcoin_df.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a8afd02",
+   "metadata": {},
+   "source": [
+    "## RENAMING COLUMNS"
    ]
   },
   {
@@ -317,12 +345,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#renaming the column to titles\n",
     "bitcoin_df.columns = ['Titles']"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ed6d6509",
+   "metadata": {},
+   "source": [
+    "## HEAD METHOD"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "e942e406",
    "metadata": {},
    "outputs": [
@@ -348,49 +385,83 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Titles</th>\n",
+       "      <th>Subjectivity</th>\n",
+       "      <th>Polarity</th>\n",
+       "      <th>Insight</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Contributing to ETF custodial holdings</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>Neutral</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Bitcoin has outperformed EVERY MAJOR ASSET for...</td>\n",
+       "      <td>0.283333</td>\n",
+       "      <td>0.03125</td>\n",
+       "      <td>Positive</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Kind of confused by this. Never received Bitco...</td>\n",
+       "      <td>0.800000</td>\n",
+       "      <td>0.10000</td>\n",
+       "      <td>Positive</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>why do different spot bitcoin etfs have differ...</td>\n",
+       "      <td>0.600000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>Neutral</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>UTXO Consolidation</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>Neutral</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                              Titles\n",
-       "0             Contributing to ETF custodial holdings\n",
-       "1  Bitcoin has outperformed EVERY MAJOR ASSET for...\n",
-       "2  Kind of confused by this. Never received Bitco...\n",
-       "3  why do different spot bitcoin etfs have differ...\n",
-       "4                                 UTXO Consolidation"
+       "                                              Titles  Subjectivity  Polarity  \\\n",
+       "0             Contributing to ETF custodial holdings      0.000000   0.00000   \n",
+       "1  Bitcoin has outperformed EVERY MAJOR ASSET for...      0.283333   0.03125   \n",
+       "2  Kind of confused by this. Never received Bitco...      0.800000   0.10000   \n",
+       "3  why do different spot bitcoin etfs have differ...      0.600000   0.00000   \n",
+       "4                                 UTXO Consolidation      0.000000   0.00000   \n",
+       "\n",
+       "    Insight  \n",
+       "0   Neutral  \n",
+       "1  Positive  \n",
+       "2  Positive  \n",
+       "3   Neutral  \n",
+       "4   Neutral  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Gives first five columns in the dataframe\n",
     "bitcoin_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "efb38c3f",
+   "metadata": {},
+   "source": [
+    "### COUNTING DUPLICATE VALUES"
    ]
   },
   {
@@ -411,6 +482,7 @@
     }
    ],
    "source": [
+    "#counts the number of duplicate values in the 'Titles' column\n",
     "bitcoin_df.Titles.duplicated().sum() "
    ]
   },
@@ -635,6 +707,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#importing modules\n",
     "from textblob import TextBlob\n",
     "from wordcloud import WordCloud, STOPWORDS"
    ]
@@ -789,6 +862,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#create visualizations using Seaborn, WordCloud, and Matplotlib with a specific visual style\n",
     "import seaborn as sns\n",
     "import warnings\n",
     "from wordcloud import WordCloud, STOPWORDS\n",
