--- a/TBA_Assignments/Assignment3_RedditApp.ipynb
+++ b/TBA_Assignments/Assignment3_RedditApp.ipynb
@@ -466,7 +466,7 @@
    "id": "86118d12",
    "metadata": {},
    "source": [
-    "## TWITTER DATA PREPROCESSING FOR BITCOIN ANALYSIS"
+    "## TWITTER DATA PREPROCESSING FOR TAYLOR ANALYSIS"
    ]
   },
   {
@@ -1953,7 +1953,7 @@
    "id": "bddefb5b",
    "metadata": {},
    "source": [
-    "## TWITTER DATA PREPROCESSING FOR BITCOIN ANALYSIS"
+    "## TWITTER DATA PREPROCESSING FOR AMAZON ANALYSIS"
    ]
   },
   {
