--- a/TBA_Assignments/Assignment2_DataAnalysis.ipynb
+++ b/TBA_Assignments/Assignment2_DataAnalysis.ipynb
@@ -478,7 +478,8 @@
     }
    ],
    "source": [
-    "df.describe()  #generates descriptive statistics of DataFrame "
+    "#generates descriptive statistics of DataFrame \n",
+    "df.describe()  "
    ]
   },
   {
@@ -574,7 +575,8 @@
     }
    ],
    "source": [
-    "df['length'] = df['Name'].str.len()  #creates new column length that has length of name\n",
+    "#creates new column length that has length of name\n",
+    "df['length'] = df['Name'].str.len()  \n",
     "df.describe()"
    ]
   },
@@ -728,6 +730,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#changing case of columns\n",
     "df['Nationality'] = df['Nationality'].str.upper()\n",
     "df['Cause of death'] = df['Cause of death'].str.upper() #converts position column to uppercase\n",
     "df['Name'] = df['Name'].str.upper()  "
@@ -756,6 +759,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#importing matplotlib\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -764,7 +768,7 @@
    "id": "3c4f0685",
    "metadata": {},
    "source": [
-    "## .2 LINEPLOT"
+    "## DOT TO LINEPLOT"
    ]
   },
   {
@@ -1024,6 +1028,7 @@
     }
    ],
    "source": [
+    "#generating tokens\n",
     "testtext = \"Hi welcome to TEXT BASED ANALYSIS class welcome to you all\"\n",
     "testtokens = tokenize(testtext)\n",
     " \n",
@@ -1234,8 +1239,9 @@
     }
    ],
    "source": [
+    "#iterates over each entry,updating the counter with the token counts\n",
     "counter = Counter()\n",
-    "df['tokens'].map(counter.update)  #iterates over each entry,updating the counter with the token counts\n",
+    "df['tokens'].map(counter.update)  \n",
     "print(counter.most_common(5))"
    ]
   },
@@ -1254,8 +1260,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#include only rows where the 'freq' column is greater than or equal to 1.\n",
     "freq_df = pd.DataFrame.from_dict(counter, orient='index', columns=['freq'])\n",
-    "freq_df = freq_df.query('freq >= 1') #include only rows where the 'freq' column is greater than or equal to 1.\n",
+    "freq_df = freq_df.query('freq >= 1') \n",
     "freq_df.index.name = 'token'"
    ]
   },
@@ -1465,7 +1472,8 @@
     }
    ],
    "source": [
-    "freq_df.describe() #describe() can give you information such as the count, mean, standard deviation..."
+    "#describe() can give you information such as the count, mean, standard deviation...\n",
+    "freq_df.describe()"
    ]
   },
   {
@@ -1512,8 +1520,9 @@
     }
    ],
    "source": [
+    "#Inverts the y-axis, so the highest frequency is at the top of the plot.\n",
     "ax = freq_df.head(15).plot(kind='barh', width=0.95, figsize=(12,8))\n",
-    "ax.invert_yaxis()   #Inverts the y-axis, so the highest frequency is at the top of the plot.\n",
+    "ax.invert_yaxis()  \n",
     "ax.set(xlabel='Frequency', ylabel='Token', title='Top Words')"
    ]
   },
@@ -1602,8 +1611,9 @@
     }
    ],
    "source": [
+    "# uses the frequency information from the DataFrame to fit the WordCloud.\n",
     "wc = WordCloud(background_color='white', width = 800, height=800, max_words=100, margin=2)\n",
-    "wc.fit_words(freq_df['freq'].to_dict() ) # uses the frequency information from the DataFrame to fit the WordCloud.\n",
+    "wc.fit_words(freq_df['freq'].to_dict() ) \n",
     "plt.figure(figsize = (8, 8), facecolor = None)\n",
     "plt.imshow(wc) #displays the WordCloud.\n",
     "plt.axis(\"off\")\n",
