--- a/TBA_Assignments/Assignment1_PythonStrings.ipynb
+++ b/TBA_Assignments/Assignment1_PythonStrings.ipynb
@@ -21,7 +21,7 @@
    "id": "a1e45c4e",
    "metadata": {},
    "source": [
-    "## STRING CONCATINATION"
+    "## STRING CONCATENATION"
    ]
   },
   {
@@ -494,6 +494,61 @@
    "source": [
     "# counting occurence of characters in text\n",
     "print(\"number of 'o' in \", s, \"':\", s.count('o'))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22f11826",
+   "metadata": {},
+   "source": [
+    "# STEMMING"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b317898",
+   "metadata": {},
+   "source": [
+    "Stemming is a text normalization technique used in natural language processing (NLP) to reduce words to their root or base form, known as the stem. The stem need not be identical to the morphological root of the word; it is simply a canonical form to which related words can be mapped."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "55eb843d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Word\t\tStem\n",
+      "--------------------\n",
+      "running\t\trun\n",
+      "runs\t\trun\n",
+      "runner\t\trunner\n",
+      "easily\t\teasili\n",
+      "fairly\t\tfairli\n",
+      "fairness\t\tfair\n"
+     ]
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "from nltk.stem import PorterStemmer\n",
+    "\n",
+    "# Initialize the Porter Stemmer\n",
+    "stemmer = PorterStemmer()\n",
+    "\n",
+    "# Example words for stemming\n",
+    "words = [\"running\", \"runs\", \"runner\", \"easily\", \"fairly\", \"fairness\"]\n",
+    "\n",
+    "# Perform stemming on each word and print the results\n",
+    "print(\"Word\\t\\tStem\")\n",
+    "print(\"-\" * 20)\n",
+    "for word in words:\n",
+    "    stemmed_word = stemmer.stem(word)\n",
+    "    print(f\"{word}\\t\\t{stemmed_word}\")"
    ]
   }
  ],
