--- a/Class6_Summarisation.ipynb
+++ b/Class6_Summarisation.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "d6814e9f",
+   "metadata": {},
+   "source": [
+    "# CLASSWORK6 - TEXT SUMMARISATION"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cad8e5f1",
    "metadata": {},
    "source": [
@@ -19,7 +27,7 @@
     "from nltk.corpus import stopwords #you can remove stop words for speed\n",
     "from nltk.cluster.util import cosine_distance\n",
     "import numpy as np\n",
-    "import networkx as nx\n"
+    "import networkx as nx"
    ]
   },
   {
@@ -59,7 +67,7 @@
     "sentences = []\n",
     "for sentence in article:\n",
     "    print(sentence)\n",
-    "    sentences.append(sentence.replace(\"[^a-zA-Z]\", \" \").split(\" \"))\n"
+    "    sentences.append(sentence.replace(\"[^a-zA-Z]\", \" \").split(\" \"))"
    ]
   },
   {
@@ -117,7 +125,7 @@
     "     # build the vector for the second sentence\n",
     "    for w in sent2:\n",
     "          vector2[all_words.index(w)] += 1\n",
-    "    return 1 - cosine_distance(vector1, vector2)\n"
+    "    return 1 - cosine_distance(vector1, vector2)"
    ]
   },
   {
@@ -158,7 +166,7 @@
     "                continue \n",
     "             similarity_matrix[idx1][idx2] = sentence_similarity(sentences[idx1], sentences[idx2])\n",
     "\n",
-    "print(\"Smilarity matrix \\n\", similarity_matrix)\n"
+    "print(\"Smilarity matrix \\n\", similarity_matrix)"
    ]
   },
   {
@@ -187,7 +195,7 @@
     "# Step 3 - Rank sentences in similarity martix\n",
     "sentence_similarity_graph = nx.from_numpy_array(similarity_matrix)\n",
     "scores = nx.pagerank(sentence_similarity_graph)\n",
-    "print(\"scores\", scores)\n"
+    "print(\"scores\", scores)"
    ]
   },
   {
@@ -217,7 +225,7 @@
    "source": [
     "# Step 4 - Sort the rank and pick top sentences\n",
     "ranked_sentence = sorted(((scores[i],s) for i,s in enumerate(sentences)), reverse=True)    \n",
-    "print(\"Indexes of top ranked_sentence order are \\n\\n\", ranked_sentence)\n"
+    "print(\"Indexes of top ranked_sentence order are \\n\\n\", ranked_sentence)"
    ]
   },
   {
@@ -248,8 +256,7 @@
     "#n=2\n",
     "summarize_text = []\n",
     "for i in range(n):\n",
-    "      summarize_text.append(\" \".join(ranked_sentence[i][1]))\n",
-    "\n"
+    "      summarize_text.append(\" \".join(ranked_sentence[i][1]))"
    ]
   },
   {
@@ -277,7 +284,7 @@
    ],
    "source": [
     "# Step 6 - Output the summarize text\n",
-    "print(\"Summarize Text: \\n\", \". \".join(summarize_text))\n"
+    "print(\"Summarize Text: \\n\", \". \".join(summarize_text))"
    ]
   },
   {
@@ -333,7 +340,7 @@
     "sentences = []\n",
     "for sentence in article:\n",
     "    print(sentence)\n",
-    "    sentences.append(sentence.replace(\"[^a-zA-Z]\", \" \").split(\" \"))\n"
+    "    sentences.append(sentence.replace(\"[^a-zA-Z]\", \" \").split(\" \"))"
    ]
   },
   {
@@ -360,7 +367,7 @@
    ],
    "source": [
     "# Printing the list of sentences\n",
-    "print(\"Sentences are \", sentences)\n"
+    "print(\"Sentences are \", sentences)"
    ]
   },
   {
@@ -391,7 +398,7 @@
     "     # build the vector for the second sentence\n",
     "    for w in sent2:\n",
     "          vector2[all_words.index(w)] += 1\n",
-    "    return 1 - cosine_distance(vector1, vector2)\n"
+    "    return 1 - cosine_distance(vector1, vector2)"
    ]
   },
   {
@@ -510,7 +517,7 @@
     "                continue \n",
     "             similarity_matrix[idx1][idx2] = sentence_similarity(sentences[idx1], sentences[idx2])\n",
     "\n",
-    "print(\"Smilarity matrix \\n\", similarity_matrix)\n"
+    "print(\"Smilarity matrix \\n\", similarity_matrix)"
    ]
   },
   {
@@ -569,7 +576,7 @@
    "source": [
     "# Step 4 - Sort the rank and pick top sentences\n",
     "ranked_sentence = sorted(((scores[i],s) for i,s in enumerate(sentences)), reverse=True)    \n",
-    "print(\"Indexes of top ranked_sentence order are \\n\\n\", ranked_sentence)\n"
+    "print(\"Indexes of top ranked_sentence order are \\n\\n\", ranked_sentence)"
    ]
   },
   {
@@ -600,8 +607,7 @@
     "#n=2\n",
     "summarize_text = []\n",
     "for i in range(n):\n",
-    "      summarize_text.append(\" \".join(ranked_sentence[i][1]))\n",
-    "\n"
+    "      summarize_text.append(\" \".join(ranked_sentence[i][1]))"
    ]
   },
   {
@@ -629,7 +635,7 @@
    ],
    "source": [
     "# Step 6 - Output the summarize text\n",
-    "print(\"Summarize Text: \\n\", \". \".join(summarize_text))\n"
+    "print(\"Summarize Text: \\n\", \". \".join(summarize_text))"
    ]
   },
   {
@@ -674,7 +680,7 @@
     "sentences = []\n",
     "for sentence in article:\n",
     "    print(sentence)\n",
-    "    sentences.append(sentence.replace(\"[^a-zA-Z]\", \" \").split(\" \"))\n"
+    "    sentences.append(sentence.replace(\"[^a-zA-Z]\", \" \").split(\" \"))"
    ]
   },
   {
@@ -732,7 +738,7 @@
     "     # build the vector for the second sentence\n",
     "    for w in sent2:\n",
     "          vector2[all_words.index(w)] += 1\n",
-    "    return 1 - cosine_distance(vector1, vector2)\n"
+    "    return 1 - cosine_distance(vector1, vector2)"
    ]
   },
   {
@@ -789,7 +795,7 @@
     "                continue \n",
     "             similarity_matrix[idx1][idx2] = sentence_similarity(sentences[idx1], sentences[idx2])\n",
     "\n",
-    "print(\"Smilarity matrix \\n\", similarity_matrix)\n"
+    "print(\"Smilarity matrix \\n\", similarity_matrix)"
    ]
   },
   {
@@ -848,7 +854,7 @@
    "source": [
     "# Step 4 - Sort the rank and pick top sentences\n",
     "ranked_sentence = sorted(((scores[i],s) for i,s in enumerate(sentences)), reverse=True)    \n",
-    "print(\"Indexes of top ranked_sentence order are \\n\\n\", ranked_sentence)\n"
+    "print(\"Indexes of top ranked_sentence order are \\n\\n\", ranked_sentence)"
    ]
   },
   {
@@ -879,8 +885,7 @@
     "#n=2\n",
     "summarize_text = []\n",
     "for i in range(n):\n",
-    "      summarize_text.append(\" \".join(ranked_sentence[i][1]))\n",
-    "\n"
+    "      summarize_text.append(\" \".join(ranked_sentence[i][1]))"
    ]
   },
   {
@@ -908,7 +913,7 @@
    ],
    "source": [
     "# Step 6 - Output the summarize text\n",
-    "print(\"Summarize Text: \\n\", \". \".join(summarize_text))\n"
+    "print(\"Summarize Text: \\n\", \". \".join(summarize_text))"
    ]
   }
  ],
