--- a/Class6_Summarisation.ipynb
+++ b/Class6_Summarisation.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5fb43594",
+   "metadata": {},
+   "source": [
+    "Text summarization is the process of condensing a given text while retaining its main ideas and key information. There are generally two main approaches to text summarization: extractive and abstractive."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cad8e5f1",
    "metadata": {},
    "source": [
@@ -137,6 +145,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "152b009e",
+   "metadata": {},
+   "source": [
+    "A similarity matrix is a mathematical representation used to quantify the similarity between two sets of data points. It is often employed in various fields, such as machine learning, natural language processing, and clustering analysis. The elements of the matrix indicate the degree of similarity between pairs of items."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "6c48adb8",
@@ -175,6 +191,14 @@
    "metadata": {},
    "source": [
     "## GETTING PAGERANK SCORES"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa358307",
+   "metadata": {},
+   "source": [
+    "PageRank is an algorithm used by Google Search to rank web pages in its search engine results.The algorithm assigns a numerical weighting to each element of a hyperlinked set of documents, such as web pages, with the purpose of measuring its relative importance within the set. The underlying idea is that important pages are likely to have more links from other pages."
    ]
   },
   {
