--- a/TBA_Assignments/Assignment3_RedditApp.ipynb
+++ b/TBA_Assignments/Assignment3_RedditApp.ipynb
@@ -5,7 +5,7 @@
    "id": "2b019813",
    "metadata": {},
    "source": [
-    "# CLASSWORK3_REDDIT APP DATA"
+    "# ASSIGNMENT3_REDDIT APP DATA"
    ]
   },
   {
@@ -466,7 +466,7 @@
    "id": "86118d12",
    "metadata": {},
    "source": [
-    "## TWITTER DATA PREPROCESSING FOR TAYLOR ANALYSIS"
+    "## TWITTER DATA PREPROCESSING FOR BITCOIN ANALYSIS"
    ]
   },
   {
@@ -1953,7 +1953,7 @@
    "id": "bddefb5b",
    "metadata": {},
    "source": [
-    "## TWITTER DATA PREPROCESSING FOR AMAZON ANALYSIS"
+    "## TWITTER DATA PREPROCESSING FOR BITCOIN ANALYSIS"
    ]
   },
   {
@@ -2956,7 +2956,7 @@
    "id": "46f40ae6",
    "metadata": {},
    "source": [
-    "## WORDCLOUD2"
+    "## WORDCLOUD 2"
    ]
   },
   {
